# 0tpulta

./: CMakeLists.txt  README.md  all.sh  all.shy  start.sh
build_3do/: CMakeCache.txt  Makefile  cmake_install.cmake
build_arc-d/: CMakeCache.txt  Makefile  cmake_install.cmake
build_dreamcast/: CMakeCache.txt  Makefile  cmake_install.cmake
build_ds/: CMakeCache.txt  Makefile  cmake_install.cmake
build_jelos/: CMakeCache.txt  Makefile  cmake_install.cmake
build_msdos/: CMakeCache.txt  Makefile  cmake_install.cmake
build_ps1/: CMakeCache.txt  Makefile  cmake_install.cmake
build_psp/: CMakeCache.txt  Makefile  cmake_install.cmake
build_rg353/: CMakeCache.txt  Makefile  cmake_install.cmake
build_rgb30/: CMakeCache.txt  Makefile  cmake_install.cmake
build_rocknix/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: PLATFORMS.md  file_index.txt
recordings/: README.md
src/: main.c
src/platform/3do/: init.c
src/platform/arc-d/: init.c
src/platform/dreamcast/: init.c
src/platform/ds/: init.c
src/platform/jelos/: init.c
src/platform/msdos/: init.c
src/platform/ps1/: init.c
tools/: build_rocknix.sh  install.sh  setup_all_platforms.sh  setup_dos.sh  setup_nds.sh
tools/scripts/: build_3do.sh  build_arc-d.sh  build_dreamcast.sh  build_ds.sh  build_jelos.sh  build_msdos.sh  build_portmaster.sh  build_ps1.sh  build_psp.sh  build_rg353.sh  build_rgb30.sh  build_rocknix.sh  setup_amiga.sh  setup_atari.sh  setup_dos.sh  setup_dreamcast.sh  setup_ds.sh  setup_haiku.sh  setup_linux_arm.sh  setup_ps2.sh  setup_psp.sh  setup_windows.sh
(+4 files in other folders)
